[package]
name = "deduplicator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
num_cpus = "1.14"

