[package]
name = "deduplicator"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.2"          # For directory traversal
rayon = "1.6.1"            # For parallel processing
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0"         # For JSON handling
openssl = "0.10"           # For SHA-1 hashing
clap = { version = "4.0", features = ["derive"] }  # For CLI argument parsing
hex = "0.4"                # For encoding the hash to hex

[profile.release]
opt-level = 3

